<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Chimera Revo</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_read">Read</string>
    <string name="action_newcomment">New Comment</string>
    <string name="action_favorite">Add to Favorites</string>
    <string name="action_remove_favorite">Remove from Favorites</string>
    <string name="action_favoriteslist">My Favorites</string>
    <string name="action_unlock_premium">Unlock Premium</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="content_descr_drawer">Drawer Icon</string>
    <string name="content_descr_general">Image</string>

    <string name="hint_search">Search in CR</string>

    <string name="error_connection_timeout">Connection Timeout</string>
    <string name="error_unknown_host">Unknown Host</string>
    <string name="error_occurred">An error has occurred</string>
    <string name="error_notavailable">N/A</string>
    <string name="error_connection_na">Internet Connection Not Available</string>
    <string name="error_value_notvalid">Inserted value is not valid</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="error_disqus">Disqus has encountered an error, we apologize for the inconvenience.</string>

    <string name="text_loading">Loading…</string>
    <string name="text_today">Today</string>
    <string name="text_loadmore">Load More Posts</string>
    <string name="text_info">Infos</string>
    <string name="text_developer">Simone Renzo (simone201)</string>
    <string name="text_steve_watching" translatable="false">Steve PaP wants you!</string>
    <string name="text_general">General</string>
    <string name="text_newfeed">New Feeds Found! Performing auto-update…</string>
    <string name="text_categories_all">All the categories</string>
    <string name="text_brands_all">All the brands</string>

    <string name="text_customize">Customize</string>
    <string name="justify_text_text">Justify Text</string>
    <string name="justify_text_summary">Enabling will remove text formatting</string>
    <string name="text_size_text">Text Size</string>
    <string name="text_size_summary">Adjust the font size as you wish</string>
    <string name="text_imgs">Images</string>
    <string name="load_imgs_text">Load Images</string>
    <string name="load_imgs_summary">Load all the images in an article</string>
    <string name="load_vid_text">Load Videos</string>
    <string name="load_vid_summary">Load videos thumbnails in an article</string>
    <string name="gallery_num_text">Galleries to Load</string>
    <string name="gallery_num_summary">The amount of galleries to load in an article</string>
    <string name="comments_reset_text">Delete comments credentials</string>
    <string name="comments_reset_summary">Re-login required after this action</string>
    <string name="comments_reset_toast">Data cleared successfully</string>
    <string name="show_tutorial_title">Show Tutorial</string>
    <string name="show_tutorial_summary">Re-show the first time tutorial</string>

    <string name="text_gotocomments">Go to Comments</string>
    <string name="text_addcomment">Add Comment</string>
    <string name="text_replycomment">Reply to a Comment</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_close">Close</string>
    <string name="text_sendcomment">Send</string>
    <string name="hint_comment_text">Comment Text</string>
    <string name="text_comment_save">Remember my infos</string>
    <string name="text_sending_comment">Sending Comment…</string>
    <string name="text_nocomments">No comments…yet</string>
    <string name="text_textnotempty">Comment text cannot be empty!</string>
    <string name="text_sentfromapp">Sent from Chimera Revo for Android</string>
    <string name="text_commentsent">Comment successfully sent!</string>
    <string name="text_login">Logging In…</string>

    <string name="text_notification">Notifications &amp; Widgets</string>
    <string name="text_news_search_text">News Search</string>
    <string name="text_news_search_summary">Enables widgets auto-refresh</string>
    <string name="text_notification_text">Notifications</string>
    <string name="text_notification_summary">Notify on new posts</string>
    <string name="text_notification_delay_text">Search Interval</string>
    <string name="text_notification_delay_summary">Customize the news search period</string>
    <string name="text_notification_vibrate_text">Vibrate</string>
    <string name="text_notification_sound_text">Sound</string>
    <string name="text_notification_light_text">LED Light</string>
    <string name="text_notification_light_color_text">LED Color</string>

    <string name="text_newposts_summary">News Found! Click to open the app</string>
    <string name="text_open_app">Open on Phone</string>
    <string name="text_nofavorites">No Favorites Found</string>
    <string name="text_favorites_resetted">Favorites have been cleared due to database upgrade</string>

    <string name="widget_list_name" translatable="false">CR HomeList</string>
    <string name="widget_lr_name" translatable="false">CR Material</string>

    <string name="text_report">Reporting</string>
    <string name="analytics_text">Google Analytics</string>
    <string name="analytics_summary">Report anonymous data to improve the experience</string>

    <string name="text_previous">PREVIOUS</string>
    <string name="text_next">NEXT</string>
    <string name="text_continue">CONTINUE</string>
    <string name="text_accept">ACCEPT</string>
    <string name="text_decline">DECLINE</string>
    <string name="text_begin">BEGIN</string>

    <string name="about_version_title">App Version</string>
    <string name="about_dev_title" translatable="false">N.E.A.R. Team</string>

    <string name="text_premium_list">You\'re about to unlock:\n\n- App Widgets (List and Material like)\n- Remove ads from the app\n-Remove loading screen on startup\n- Help the development of the app :)</string>

</resources>
