<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#90333333" />

    <Button
        android:id="@+id/unlock_premium_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/action_unlock_premium"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="start|center_vertical"
        android:background="@drawable/cards_list_item_background_dark"
        android:onClick="onClick"
        android:drawableLeft="@drawable/ic_action_buy"
        android:drawableStart="@drawable/ic_action_buy"
        android:visibility="gone" />

    <Button
        android:id="@+id/favorite_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/action_favoriteslist"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="start|center_vertical"
        android:background="@drawable/cards_list_item_background_dark"
        android:onClick="onClick"
        android:drawableLeft="@drawable/ic_action_favorite"
        android:drawableStart="@drawable/ic_action_favorite" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/action_settings"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="start|center_vertical"
        android:background="@drawable/cards_list_item_background_dark"
        android:onClick="onClick"
        android:drawableLeft="@drawable/ic_action_settings"
        android:drawableStart="@drawable/ic_action_settings" />

    <Button
        android:id="@+id/about_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/action_about"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="start|center_vertical"
        android:background="@drawable/cards_list_item_background_dark"
        android:onClick="onClick"
        android:drawableLeft="@drawable/ic_action_about"
        android:drawableStart="@drawable/ic_action_about" />

</LinearLayout>