<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp" >

        <ListView
            android:id="@+id/posts_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="52dp"
            android:gravity="center"
            android:divider="@android:color/transparent"
            android:clipToPadding="false" />

        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/text_loading"
                android:textSize="18sp" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/widget_refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="22dp"
            android:layout_gravity="end|bottom"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_refresh_fab"
            android:contentDescription="@string/content_descr_general" />

    </FrameLayout>

</FrameLayout>